[package]
name = "Lyra_Blockchain"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] } 
sha2 = "0.10.8"
rand = "0.8"
serde = "1.0.219"
serde_json = "1.0.140"
k256 = "0.13.4"
hex = "0.4.3"
time = "0.3.39"
serde_derive = "1.0.219"
generic-array = "0.14" 	
argon2 = "0.5.3"
rand_core = "0.9.3"
aes-gcm = "0.10.3"
scanpw = "1.0.0"
bip39 = "2.2.0"
dirs = "6.0.0"
epoch = "0.0.2"
bytes = "1.11.0"
chrono = "0.4.42"
