[package]
name = "simple_blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] } ## for node listening and sending
sha2 = "0.10.8"
rand = "0.8"
serde = "1.0.219"
serde_json = "1.0.140"
k256 = "0.13.4"
hex = "0.4.3"
time = "0.3.39"
serde_derive = "1.0.219"

[alias]     # command aliases
b = "test"
t = "test"
get = "run"

